--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -2,17 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ChatCat - Topic Goes Here</title>
+	<title>ChatCat - <%= room %></title>
 	<link rel="stylesheet" href="/css/chatroomStyles.css">
 	<script src="/js/jquery-2.1.4.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
-	<script>
+	<script type='text/javascript'>
 		'use strict';
 		$(() => {
 			let socket = io('<%= host %>' + '/chatter');
 			let roomID = '<%= roomID %>';
 			let user = '<%= user.fullName %>';
-			let userPic = '<% user.profilePic %>';
+			let userPic = '<%= user.profilePic %>';
+			
+			socket.on('connect', () => {
+				socket.emit('join', {
+					roomID,
+					user,
+					userPic
+				});
+			});
 		});
 	</script>
 </head>
