--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -13,6 +13,7 @@
 			let roomID = '<%= roomID %>';
 			let user = '<%= user.fullName %>';
 			let userPic = '<%= user.profilePic %>';
+			let chatUsers = $('.chatUsers');
 			
 			socket.on('connect', () => {
 				socket.emit('join', {
@@ -21,6 +22,23 @@
 					userPic
 				});
 			});
+			
+			let userList = user => {
+				return `<div class="userBlock">
+					<div class="userPic"><img src="${user.userPic}" alt="${user.user}"></div>
+					<div class="cuserName">${user.user}</div>
+					</div>`;
+			};
+			
+			socket.on('updateUsersList', data => {
+				let parsedData = JSON.parse(data);
+				let usersListData = '';
+				for (let user of parsedData){
+					usersListData += userList(user);
+				}
+				chatUsers.html('').html(usersListData);
+			});
+			
 		});
 	</script>
 </head>
